# memcheck

./: CMakeLists.txt  README.md  build.sh
hdr/: MemCheck.h  MemTest.h
src/: MemCheck.cpp  MemTest.cpp  main.cpp
